k8s/import-yaml-files/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: l1-monitoring
  labels:
    name: l1-monitoring
