k8s/import-yaml-files/ollama-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ollama
  labels:
    app: ollama
spec:
  selector:
    app: ollama
  ports:
  - port: 11434
    targetPort: 11434
    name: api
  type: ClusterIP
